--- a/THANKS
+++ b/THANKS
@@ -25,6 +25,7 @@ Joel N. Weber II <devnull@gnu.org>
 Joseph Beckenbach III <jrb3@best.com>
 Karl Berry <kb@cs.umb.edu>
 Kenneth Albanowski <kjahds@kjahds.com>
+Manfred Weichel <Manfred.Weichel@pdb.siemens.de>
 Marc J. Fraioli <fraioli@dg-rtp.dg.com>
 Mark Elbrecht <snowball3@usa.net>
 Mark Kettenis <kettenis@phys.uva.nl>
