--- a/THANKS
+++ b/THANKS
@@ -39,4 +39,5 @@ Thomas Esser <te@informatik.uni-hannover.de>
 Todd Vierling <tv@pobox.com>
 Tom Tromey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
+Vladimir Kushnir <kushn@mail.kar.net>
 Volker Kuhlmann <kuhlmav@elec.canterbury.ac.nz>
