--- a/THANKS
+++ b/THANKS
@@ -35,6 +35,7 @@ Raffaele Sena <raff@aromatic.com>
 Ron O'Hara <rono@sentuny.com.au>
 Sebastian Wilhelmi <wilhelmi@ira.uka.de>
 Stephan Kulow <coolo@kde.org>
+Steven M. Schultz <sms@wlv.iipo.gtegsc.com>
 Thomas Esser <te@informatik.uni-hannover.de>
 Todd Vierling <tv@pobox.com>
 Tom Tromey <tromey@cygnus.com>
