--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-01-20  Andrey Slepuhin  <pooh@msu.ru>
+
+	* ltconfig.in (aix4*): check for reworked collect2, always pass
+	-bnoentry option to linker when building a shared library
+
 1999-01-20  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltmain.in (file_magic): follow soft-links before running `file'
