--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-01-20  Erez Zadok <ezk@shekel.mcl.cs.columbia.edu>
+
+	* ltmain.in: s/n\'t/ not/
+	* doc/PLATFORMS: updates for sunos4/m68k and aix
+
 1999-01-20  Andrey Slepuhin  <pooh@msu.ru>
 
 	* ltconfig.in (aix4*): check for reworked collect2, always pass
