--- a/THANKS
+++ b/THANKS
@@ -32,6 +32,7 @@ Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
 Raffaele Sena <raff@aromatic.com>
+Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>
 Ron O'Hara <rono@sentuny.com.au>
 Sebastian Wilhelmi <wilhelmi@ira.uka.de>
 Stephan Kulow <coolo@kde.org>
