--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-01-20  Erez Zadok <ezk@shekel.mcl.cs.columbia.edu>
+
+	* ltconfig.in (aix4*, with_gcc, archive_cmds): fix typo in Andrey
+	Slepuhin's last patch
+
 1999-01-20  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* Makefile.am (@DIST_MAKEFILE_LIST@): work around Ultrix /bin/sh bug
