--- a/THANKS
+++ b/THANKS
@@ -13,6 +13,7 @@ Andrey Slepuhin <pooh@msu.ru>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
+Chris Laas <golem@MIT.EDU>
 Chris P. Ross <cross@eng.us.uu.net>
 Edouard G. Parmelan <Edouard.Parmelan@France.NCR.COM>
 Eric Estievenart <eric@via.ecp.fr>
