--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+1999-01-22  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* ltmain.in (ild): Revert the change which allowed libtool to
+	link libraries with dependencies on .la libs.
+	* NEWS: Removed reference to win32, incase 1.3 ships before
+	ild is ready.
+	* doc/PLATFORMS: Removed i686-pc-cygwin32, for the same reason.
+	* doc/libtool.texi: Removed win32 refs, for the same reason.
+
 1999-01-22  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltmain.in (Xsed): add 1 to Xsed definition that goes into
