--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-01-22  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* ltmain.in (ild): Redo the Reverted change which allowed libtool
+	to link libraries with dependencies on .la libs.
+	* NEWS: ReInsert reference to win32.
+	* doc/PLATFORMS: ReInsert i686-pc-cygwin32, for the same reason.
+	* doc/libtool.texi: ReInsert win32 refs, for the same reason.
+
 1999-01-22  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
 
 	* configure.in (date): echo the version number during
