* Makefile.am (ltconfig, ltmain.sh): add ChangeLog Revision to TIMESTAMP * configure.in: get values of PACKAGE and VERSION set by AM_INIT_AUTOMAKE, and extract only TIMESTAMP from the ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-01-22  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* Makefile.am (ltconfig, ltmain.sh): add ChangeLog Revision to
+	TIMESTAMP
+	* configure.in: get values of PACKAGE and VERSION set by
+	AM_INIT_AUTOMAKE, and extract only TIMESTAMP from the ChangeLog
+
 	* libltdl/ltdl.c (lt_dlopen): if we're reusing a previously opened
 	handle, don't reset its name nor add it to the list, and free the
 	name we have allocated
@@ -3596,4 +3601,4 @@ Thu May 28 18:59:08 1998  Ian Lance Taylor  <ian@cygnus.com>
 
 	* For historical reasons: this is when I started writing libtool.
 
-	$Date$
+	$Revision$ $Date$
